# moraine

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  description.yml  extension_config.cmake  release-plz.toml  rustfmt.toml
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/publish-extension-release/: action.yml
.github/workflows/: ci.yml  extension.yml  pr-title.yml  release-pr.yml  release.yml
.zed/: settings.json
crates/moraine/: CHANGELOG.md  Cargo.toml  build.rs
crates/moraine-duckdb/: .clangd  Cargo.toml  README.md  build.rs  cbindgen.toml  compile_flags.txt
crates/moraine-duckdb/cpp/: catalog.cpp  catalog.hpp  extension.cpp  index_functions.cpp  inline_tables.cpp  inline_tables.hpp  metadata_tables.cpp  metadata_tables.hpp  moraine_abi.h  moraine_extension.cpp  owned_array.hpp  scan.cpp  scan.hpp  staged_write.cpp  staged_write.hpp  storage_extension.cpp  transaction_manager.cpp  transaction_manager.hpp
crates/moraine-duckdb/src/: abi.rs  arrow_ipc.rs  dumps.rs  entrypoint.rs  error.rs  inline.rs  lib.rs  runtime.rs  staged.rs  test_support.rs
crates/moraine-duckdb/src/dumps/: catalog.rs  files.rs  macros.rs  mappings.rs  partitions.rs  snapshots.rs  statistics.rs  tags.rs
crates/moraine-duckdb/tests/: duckdb_load.rs  ducklake_load.rs
crates/moraine-duckdb/tests/ducklake_load/: attach.rs  change_feed.rs  ddl.rs  helpers.rs  index.rs  inline.rs  main.rs  maintenance.rs  partitioning.rs  time_travel.rs  types.rs
crates/moraine/examples/: walkthrough.rs
crates/moraine/proptest-regressions/store/: frame.txt  key.txt  value.txt
crates/moraine/proto/: moraine.proto
crates/moraine/src/: catalog.rs  error.rs  ffi_support.rs  lib.rs  store.rs  transaction.rs  txn.rs
crates/moraine/src/catalog/: handle.rs  index_policy.rs  inline.rs  projection.rs  scoped_read.rs  snapshot.rs  types.rs
crates/moraine/src/ffi_support/: index.rs  inline.rs  staged.rs
crates/moraine/src/store/: frame.rs  handle.rs  index_encoding.rs  inline.rs  key.rs  open.rs  proto.rs  read.rs  segment.rs  value.rs
crates/moraine/src/transaction/: commit.rs  index_maintenance.rs  operations.rs  staged.rs  verbs.rs
crates/moraine/src/transaction/commit/: diff.rs  tests.rs
crates/moraine/src/transaction/staged/: apply.rs  decode.rs  index_upkeep.rs  inline.rs  tests.rs
crates/moraine/src/txn/: commit.rs  ops.rs  verbs.rs
crates/moraine/tests/: catalog.rs  commit_concurrency.rs  data_files.rs  macros.rs  object_storage.rs  smoke.rs  views_options.rs
crates/moraine/tests/it/: catalog.rs  commit_concurrency.rs  data_files.rs  fixtures.rs  index_backfill.rs  macros.rs  main.rs  views_options.rs
docs/rfcs/: 0000-template.md  0001-repository-structure-and-conventions.md  0002-slatedb-key-encoding.md  0003-public-api-shape.md  0004-commit-protocol.md  0005-data-inlining.md  0006-extension-surface.md  0007-snapshot-expiry-and-gc.md  0008-compaction.md  0009-reader-consistency-and-caching.md  0010-async-sync-bridge.md  0011-crash-injection-test-matrix.md  0012-schema-evolution-and-versioning.md  0013-partitioning-and-pruning.md  0013-partitioning-sorting-and-pruning.md  0014-encryption.md  0015-format-migration.md  0016-equality-indexes.md  0016-recent-row-archive.md  0017-equality-indexes.md  0017-read-write-and-read-only-attach.md  0018-column-and-name-mapping.md  0019-macros.md  0020-change-data-feed.md  0021-benchmark-suite.md  README.md
xtask/: Cargo.toml
xtask/src/: bench.rs  duckdb.rs  e2e.rs  main.rs  s3.rs
xtask/src/bench/: backends.rs  report.rs  timing.rs  workloads.rs
