[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexpropp/moraine"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
arrow = { version = "59.1.0", default-features = false }
async-trait = "0.1"
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
parquet = { version = "59.1.0", default-features = false, features = ["arrow", "async", "snap", "zstd"] }
moraine = { path = "crates/moraine", version = "0.2.0" }
# object_store must stay on the same minor as slatedb's
object_store = "0.14"
prost = "0.14"
prost-build = "0.14"
protox = "0.9"
proptest = "1"
proptest-derive = "0.8"
slatedb = "0.14.1"
storekey = "0.11"
thiserror = "2"
tokio = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
cbindgen = { version = "0.29", default-features = false }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
undocumented_unsafe_blocks = "deny"
mod_module_files = "deny"
