[package]
name = "moraine-duckdb"
description = "DuckDB extension exposing the moraine DuckLake catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
moraine = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }

[build-dependencies]
anyhow = { workspace = true }
cc = { workspace = true }

[lints]
workspace = true
