[package]
name = "moraine-duckdb"
description = "DuckDB extension exposing the moraine DuckLake catalog"
# Distributed as a prebuilt .duckdb_extension artifact, not a crate.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# A static library the DuckDB extension toolchain links into the loadable
# `.duckdb_extension` (the toolchain, not cargo, owns the final link).
crate-type = ["staticlib"]

[dependencies]
arrow = { workspace = true, features = ["ffi", "ipc"] }
moraine = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }

[lints]
workspace = true
