[package]
name = "moraine"
description = "A SlateDB-backed catalog for DuckLake"
readme = "../../README.md"
keywords = ["duckdb", "ducklake", "slatedb", "catalog", "lakehouse"]
categories = ["database-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true, features = ["ipc"] }
bytes = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
prost = { workspace = true }
slatedb = { workspace = true }
storekey = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
